src/index.css
:root {
  --border-alpha: 0.15;
  --border-radius: 1rem;
  --section-padding: 1.5rem;
  --content-width: 70rem;
}
:root {
  --md-sys-color-background: hsla(196 47.8% 4.5% / 0.65);
  --md-sys-color-surface: hsla(196 21.3% 12% / 0.8);
  --md-sys-color-on-surface: hsl(196 0% 100%);
  --md-sys-color-border: hsla(196 0% 100% / var(--border-alpha));
}
@media (prefers-color-scheme: light) {
  :root {
    --md-sys-color-background: hsla(196 25.3% 85.3% / 0.65);
    --md-sys-color-surface: hsla(196 100% 97.3% / 0.8);
    --md-sys-color-on-surface: hsl(196 0% 0.8%);
    --md-sys-color-border: hsla(196 0% 0.8% / var(--border-alpha));
  }
}
@media (prefers-contrast: more) {
  :root {
    --border-alpha: 0.9;
  }
}
@media (prefers-color-scheme: dark) {
  img[data-invertible] {
    filter: invert(1);
    filter: url('#invert-filter');
  }
}

@font-face {
  font-family: 'Lilex';
  font-weight: 100 700;
  font-display: swap;
  src:
    local('Lilex'),
    url('/fonts/Lilex/Lilex-VariableFont_wght.woff2') format('woff2'),
    url('/fonts/Lilex/Lilex-VariableFont_wght.ttf') format('truetype');
}
@font-face {
  font-family: 'Lilex';
  font-weight: 100 700;
  font-display: swap;
  font-style: italic;
  src:
    local('Lilex'),
    url('/fonts/Lilex/Lilex-Italic-VariableFont_wght.woff2') format('woff2'),
    url('/fonts/Lilex/Lilex-Italic-VariableFont_wght.ttf') format('truetype');
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  width: 100%;
  height: 100%;
  color-scheme: dark light;
  overflow-y: auto;
  scroll-behavior: smooth;
  scroll-padding-top: 7rem;
}
html::before {
  content: '';
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: -1;
  background:
    linear-gradient(
      var(--md-sys-color-background),
      var(--md-sys-color-background)
    ),
    url('bg.webp') center center / 100vw 100vh #035f63 no-repeat !important;
}

body {
  color: var(--md-sys-color-on-surface);
  font-family:
    Lilex, 'Droid Sans Mono', 'Fira Code', 'Fira Mono', 'JetBrains Mono',
    ui-monospace, monospace;
}

a {
  color: inherit;
  text-decoration: underline;
}

code {
  font-family: inherit;
  padding: 0.2em;
  margin: -0.2em;
  background: var(--md-sys-color-background);
  color: var(--md-sys-color-on-surface);
  opacity: 0.9;
}

img.mock-mac-os-icon {
  /* Matches the padding of a macOS icon */
  padding: calc(var(--img-size) / 10);
  border-radius: calc(var(--img-size) * 0.25);
}

header {
  position: sticky;
  top: 0;
  padding: 1rem;
  padding-inline: calc((100vw - var(--content-width)) / 2 + 1rem);
  transition: background-color 0.2s ease-out;
  z-index: 1;
  backdrop-filter: blur(128px);

  display: flex;
  flex-flow: row wrap;
  gap: 1rem;

  --pfp-width: min(10vw, 5rem);

  .pfp {
    grid-area: pfp;
    z-index: 1;
    img {
      width: var(--pfp-width);
      height: auto;
      box-sizing: content-box;
    }
  }

  .titles {
    grid-area: titles;
    align-self: center;
    transform: translate(calc(-1 * var(--pfp-width) - 1rem), var(--pfp-width));
    transition: transform 0.2s ease-out;
  }
  &.scrolled {
    background-color: var(--md-sys-color-background);

    .titles {
      transform: translate(0, 0);
    }
  }

  & h1 + p {
    font-size: 1.5rem;
    font-weight: 300;
    font-style: italic;
    margin-top: -0.25rem;
    margin-bottom: -0.5rem;
  }
}

main {
  scrollbar-width: thin;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1px; /* so the last section's margin-bottom is visible */
  transition:
    padding-left 0.1s ease-out,
    padding-right 0.1s ease-out;
  max-width: var(--content-width);
  margin: auto;
}

@media (width <= 80rem) {
  main {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

@media print {
  html {
    height: auto;
  }

  body {
    background: none;
  }

  main {
    grid-column: 1 / -1;
    overflow: visible;
    height: auto;
  }

  a {
    text-decoration: none;
  }

  a::after {
    content: ' (' attr(href) ')';
    font-style: italic;
    opacity: 0.8;
    font-weight: 300;
  }

  a[href^='#']::after,
  section .section-header .technologies a::after {
    content: '';
  }
}

section {
  background: var(--md-sys-color-surface);
  color: var(--md-sys-color-on-surface);
  padding: var(--section-padding);
  border-radius: var(--border-radius);
  border: 1px solid var(--md-sys-color-border);
  margin-bottom: 2rem;

  & h2 {
    margin-bottom: 1.5rem;

    & a {
      text-decoration: none;
    }
  }

  & p,
  & ul {
    margin-bottom: 0.75rem;
  }

  & ul {
    padding-inline-start: 1.5rem;
  }

  & .date {
    text-align: end;
    font-weight: 300;
    font-style: italic;
    opacity: 0.9;
    margin-bottom: 0;
  }

  & .section-header {
    display: flex;
    flex-flow: row wrap;
    margin-bottom: 1.5rem;
    align-items: center;

    & img {
      --img-size: 2em;
      height: var(--img-size);
      width: auto;
      max-width: calc(var(--img-size) * 1.5);
      margin-inline-end: 0.5rem;
    }

    & h2 {
      flex: 1 0;
      margin-bottom: 0;
      padding-inline-end: 0.5rem;
      align-content: center;
    }

    & .technologies {
      flex: 1 0;
      text-align: end;
    }

    & .technologies > *:last-child img {
      margin-inline-end: 0;
    }

    .date-mobile {
      display: none;
    }

    @media (width <= 40rem) {
      .date-desktop {
        display: none;
      }
      .date-mobile {
        display: block;
        flex: 1 0 50vw;
        text-align: center;
      }

      .technologies {
        flex: none;
      }
    }
  }

  & .section-images {
    /* scrollable row of images */
    display: flex;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    gap: 1rem;

    /* allow images to scroll up to edge of section */
    margin-inline: calc(-1 * var(--section-padding));
    padding-inline: var(--section-padding);
    /* keep scrollbar out of the way */
    margin-bottom: calc(-1 * var(--section-padding));
    padding-bottom: var(--section-padding);

    & > * {
      flex-shrink: 0;
      border-radius: var(--border-radius);
      cursor: zoom-in;
    }

    & img {
      --img-size: min(33vh, 33vw);
      height: var(--img-size);
      width: auto;
      border-radius: var(--border-radius);
      border: 0.1px solid var(--md-sys-color-border);
    }
  }
}

.section-dialog {
  display: flex;
  flex-flow: column nowrap;
  width: 90vw;
  margin: 1rem auto;

  &,
  & .MuiDialog-paper {
    color: var(--md-sys-color-on-surface);
    border-radius: var(--border-radius);
  }
  & .MuiDialog-paper {
    background: var(--md-sys-color-surface);
    backdrop-filter: blur(64px);
  }

  & .section-dialog-header {
    display: flex;
    flex-flow: row nowrap;
    margin-bottom: 1rem;
    padding: 1rem;

    & .spacer {
      flex: 1;
    }
    & .section-dialog-button {
      appearance: none;
      padding: 0.5rem;
      background: none;
      border: none;
      cursor: pointer;
      &[disabled] {
        cursor: default;
      }
    }
    & .section-dialog-nav {
      display: flex;
      flex-flow: row nowrap;
      gap: 1rem;
      padding-inline: 1rem;
      & > p {
        padding-block: 0.5rem;
      }
    }
  }
  & .section-dialog-wrapper {
    flex: 1;
    width: 100%;
    & .section-dialog-content {
      width: 100%;
      & img {
        flex: 1;
        width: 100%;
        height: auto;
        max-height: 90lvh;
        object-fit: contain;
        border-radius: var(--border-radius);
      }
    }
  }
}

